HTMLCollections namedItem() methods should return null than undefined for empty collections. https://bugs.webkit.org/show_bug.cgi?id=104096

Reviewed by Kentaro Hara.

As per specification namedItem() should return null if collection is empty.
Spec: http://www.whatwg.org/specs/web-apps/current-work/multipage/common-dom-interfaces.html#htmlallcollection

Source/WebCore:

Test: fast/dom/htmlcollection-namedItem.html

* bindings/js/JSHTMLAllCollectionCustom.cpp: Returning null.
(WebCore::getNamedItems):
* bindings/js/JSHTMLFormControlsCollectionCustom.cpp: Ditto.
(WebCore::getNamedItems):
* bindings/js/JSHTMLOptionsCollectionCustom.cpp: Ditto.
(WebCore::getNamedItems):
* bindings/v8/custom/V8HTMLAllCollectionCustom.cpp: Ditto.
(WebCore::V8HTMLAllCollection::namedItemCallback):
* bindings/v8/custom/V8HTMLFormControlsCollectionCustom.cpp: Ditto.
(WebCore::V8HTMLFormControlsCollection::namedItemCallback):
* bindings/v8/custom/V8HTMLOptionsCollectionCustom.cpp: Ditto.
(WebCore::V8HTMLOptionsCollection::namedItemCallback):

LayoutTests:

* fast/dom/HTMLFormElement/move-option-between-documents-expected.txt:
* fast/dom/HTMLFormElement/move-option-between-documents.html:
* fast/dom/htmlcollection-namedItem-expected.txt: Added.
* fast/dom/htmlcollection-namedItem.html: Added.


Canonical link: https://commits.webkit.org/128051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142831 268f45cc-cd09-0410-ab3c-d52691b4dbfc