Source/WebCore/bindings/js/JSHTMLFormControlsCollectionCustom.cpp
@@ -44,7 +44,7 @@ static JSValue getNamedItems(ExecState* exec, JSHTMLFormControlsCollection* coll
     collection->impl()->namedItems(name, namedItems);
 
     if (namedItems.isEmpty())
-        return jsUndefined();
+        return jsNull();
     if (namedItems.size() == 1)
         return toJS(exec, collection->globalObject(), namedItems[0].get());
 
