Source/WebCore/bindings/js/JSHTMLOptionsCollectionCustom.cpp
@@ -44,7 +44,7 @@ static JSValue getNamedItems(ExecState* exec, JSHTMLOptionsCollection* collectio
     collection->impl()->namedItems(name, namedItems);
 
     if (namedItems.isEmpty())
-        return jsUndefined();
+        return jsNull();
     if (namedItems.size() == 1)
         return toJS(exec, collection->globalObject(), namedItems[0].get());
 
